k8s/kk-payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-payments
  namespace: kijani-staging
  labels:
    app: kk-payments
  annotations:
    kubernetes.io/change-cause: "Initial capstone deployment: v1.1.0"
spec:
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kk-payments
  template:
    metadata:
      labels:
        app: kk-payments
        version: "1.1.0"
    spec:
      imagePullSecrets:
      - name: kijani-registry-credentials
      containers:
      - name: kk-payments
        image: 192.168.49.1:5000/kijani/kk-payments:1.1.0-354334f
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
